# Memento-3.0

./: .gitignore  README.md  USER_GUIDE.md  build.gradle.kts  gradle.properties  settings.gradle.kts  strip_dt_needed.py
app/: build.gradle.kts  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/debug/java/com/myagent/app/: VoiceE2eReceiver.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: asset_registry.json
app/src/main/assets/grammars/: comic_scene.gbnf
app/src/main/assets/templates/: fullscreen.html
app/src/main/cpp/: CMakeLists.txt  lingji_llama.cpp  llama_jni.cpp
app/src/main/java/com/myagent/app/: AndroidScreenshotMode.kt  AssistantLaunch.kt  CameraHudState.kt  MainActivity.kt  MainViewModel.kt  NodeApp.kt  NodeForegroundService.kt  NodeRuntime.kt  NotificationForwardingPolicy.kt  PermissionRequester.kt  SecurePrefs.kt  SessionKey.kt  VoiceCaptureMode.kt  VoiceWakeMode.kt  WakeWords.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  myagent_logo.xml
app/src/main/res/values/: assistant.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml
app/src/play/java/com/myagent/app/: SensitiveFeatureConfig.kt
app/src/test/java/com/myagent/app/: AndroidScreenshotModeTest.kt  AssistantLaunchTest.kt  CronJobStatusParsingTest.kt  GatewayBootstrapAuthTest.kt  GatewayNodeApprovalStateTest.kt  NodeForegroundServiceTest.kt  NotificationForwardingPolicyTest.kt  PermissionRequesterTest.kt  (+4 more)
gradle/: libs.versions.toml
(+190 files in other folders)
